@@ -1,6 +1,7 @@
 ﻿v2.0.2.13 (2010-03-28) by Evaldas Jocys
 - xBox 360 controller preset thumb stick button assignment fix.
 - VID, PID, ProductName - read-only settings load fix.
+- Link to Google project added.
 
 v2.0.2.11 (2010-03-25) by Evaldas Jocys
 - DirectInput rY fix.
